# rust_shenanigans

./: README.md
amsi_patch/: Cargo.toml
amsi_patch/src/: main.rs
etw_patch/: Cargo.toml
etw_patch/src/: main.rs
unhook_ntdll/: Cargo.toml
unhook_ntdll/src/: ired.rs  main.rs
