[package]
name = "orange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "orange"
path = "src/main.rs"

[dependencies]
winapi = {version = "0.3.9", features=["memoryapi", "libloaderapi", "processthreadsapi"]}
win32-error = "0.9.0"
amsi = "0.1.0"

[build-dependencies]
static_vcruntime = "2.0"